# ParserJNI

./: README.md
JNA/: ArcanaJNI.c  ArcanaJNI.c~  CMakeCache.txt  CMakeLists.txt  JNAConvert  Makefile  Motor.java  c_parser.c  cmake_install.cmake  convertDoc.sh  flex.h  log  main.cpp  motor.c  sign.h
JNA/C/: Callback.cpp  Callback.h  Consts.cpp  Consts.h  Enum.cpp  Enum.h  Function.cpp  Function.h  Param.cpp  Param.h  Struct.cpp  Struct.h  Typedef.cpp  Typedef.h
JNA/Convert/: Parser.cpp  Parser.h
JNA/Headers/: ktb.h  motor.h  motor.h~
JNA/JNA/: Callback.cpp  Callback.h  Enum.cpp  Enum.h  JNAParser.cpp  JNAParser.h  Module.cpp  Module.h  NativeType.cpp  NativeType.h  PackageList.cpp  PackageList.h  Pointer.cpp  Pointer.h  Struct.cpp  Struct.h  SupportClass.cpp  SupportClass.h  Type.cpp  Type.h  Type.h~  TypesDictionnary.cpp  TypesDictionnary.h
JNA/JNI/: .JNIParser.cpp.swp  Comments.cpp  Comments.h  Doxyfile  JNIParser.cpp  JNIParser.cpp~  JNIParser.h  JNIParser.h~  OutputCpp.cpp  OutputCpp.cpp~  OutputCpp.h  OutputCpp.h~  OutputJNI.cpp  OutputJNI.cpp~  OutputJNI.h  OutputJNI.h~  OutputJava.cpp  OutputJava.cpp~  OutputJava.h  OutputJava.h~  TypesDictionnary.cpp  TypesDictionnary.cpp~  TypesDictionnary.h  TypesDictionnary.h~  base64.dox  cipher.dox  footer.html  gen_keypair.dox  hashFile.dox  hashString.dox  kem.dox  key_exchange.dox  mainpage.dox  prng.dox  sign.dox  test.cpp  test.h
JNA/Java/: ArcanaJNI.c  ArcanaJNI.c~  ArcanaJNI.java  ArcanaJNI.java~  cypher.java  hash.java  hashFile.java  kep.java  kep.java~  log  prng.java  prng.java~  test.java  test.java~
(+388 files in other folders)
