PROJECT(JNAConvert)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(FLEX REQUIRED)

LINK_DIRECTORIES(${FLEX_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${FLEX_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FLEX_TARGET(C_PARSER flex/c_parser.l
    "${CMAKE_CURRENT_BINARY_DIR}/c_parser.c"
    COMPILE_FLAGS "--header-file=${CMAKE_CURRENT_BINARY_DIR}/flex.h -s --yylineno"
    )
SET_SOURCE_FILES_PROPERTIES(${FLEX_C_PARSER_OUTPUTS} PROPERTIES COMPILE_FLAGS "-w")

SET(SRC_MAIN "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
FILE(GLOB_RECURSE SRC_CONVERT "${CMAKE_CURRENT_SOURCE_DIR}/Convert/*.cpp")
FILE(GLOB_RECURSE SRC_C "${CMAKE_CURRENT_SOURCE_DIR}/C/*.cpp")
FILE(GLOB_RECURSE SRC_JNI "${CMAKE_CURRENT_SOURCE_DIR}/JNI/*.cpp")
FILE(GLOB_RECURSE SRC_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/Modules/*.cpp")
FILE(GLOB_RECURSE SRC_JNA "${CMAKE_CURRENT_SOURCE_DIR}/JNA/*.cpp")
FILE(GLOB_RECURSE SRC_UTILS "${CMAKE_CURRENT_SOURCE_DIR}/Utils/*.cpp")

SET(SRC
    ${SRC_MAIN}
    ${SRC_CONVERT}
    ${SRC_C}
    ${SRC_JNI}
    ${SRC_MODULES}
    ${SRC_JNA}
    ${SRC_UTILS})

ADD_EXECUTABLE(JNAConvert ${SRC} ${FLEX_C_PARSER_OUTPUTS})
TARGET_LINK_LIBRARIES(JNAConvert ${FLEX_LIBRARIES})

